Palladium-JazzHR/src/objects/Job_Listing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Listing</relationshipLabel>
        <relationshipName>Job_Listing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Code__c</fullName>
        <label>Board Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ID__c</fullName>
        <label>Country ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Employer_Code__c</fullName>
        <label>Employer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Lead_Jazz_Id__c</fullName>
        <label>Hiring Lead Jazz Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Lead</label>
        <referenceTo>JazzHR_User__c</referenceTo>
        <relationshipLabel>Related Job Listings</relationshipLabel>
        <relationshipName>Job_Listing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Code__c</fullName>
        <label>Internal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JazzHR_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>JazzHR Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Salary__c</fullName>
        <label>Maximum Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Salary__c</fullName>
        <label>Minimum Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Vacancies__c</fullName>
        <inlineHelpText>Number of vacancies for this job listing</inlineHelpText>
        <label>No of Vacancies</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Open_Date__c</fullName>
        <label>Original Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_To_Job_Boards__c</fullName>
        <label>Send To Job Boards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_ID__c</fullName>
        <label>Team_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Job_Applications__c</fullName>
        <description>Rollup Summary field to display total job applications</description>
        <label>Total Job Applications</label>
        <summaryForeignKey>Job_Application__c.Job_Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Job Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Title__c</columns>
        <columns>Original_Open_Date__c</columns>
        <columns>Hiring_Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Department__c</columns>
        <columns>JazzHR_Job_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Default_Employers</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Maximum_Salary__c</columns>
        <columns>No_of_Vacancies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Code__c</field>
            <operation>equals</operation>
            <value>Default</value>
        </filters>
        <label>Default Employers</label>
    </listViews>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>